--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "webpack",
+    "start": "yarn build && surge --project . --domain nft-fuzion.surge.sh"
   },
   "devDependencies": {
-    "prettier": "2.5.0"
+    "prettier": "2.5.0",
+    "surge": "^0.23.0",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
