--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   },
   "devDependencies": {
     "prettier": "2.5.0",
-    "surge": "^0.23.0",
+    "surge": "^0.20.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "assert": "^2.0.0",
+    "ethers": "^5.5.2",
+    "path-browserify": "^1.0.1",
+    "polyfill": "^0.1.0",
+    "web3": "^1.6.1"
   }
 }
