--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "scripts": {
     "format": "prettier --write .",
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
+    "dev": "webpack serve --open --config webpack.dev.js",
     "start": "yarn build && surge --project . --domain nft-fuzion.surge.sh"
   },
   "devDependencies": {
+    "@squoosh/lib": "^0.4.0",
+    "copy-webpack-plugin": "^10.1.0",
+    "html-loader": "^3.0.1",
+    "html-minimizer-webpack-plugin": "^3.4.0",
+    "image-minimizer-webpack-plugin": "^3.0.1",
+    "imagemin": "^8.0.1",
+    "json-loader": "^0.5.7",
     "prettier": "2.5.0",
     "surge": "^0.20.1",
+    "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@types/jquery": "^3.5.10",
