--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:dev": "webpack --config webpack.dev.js",
     "dev": "webpack serve --open --config webpack.dev.js",
     "start": "yarn build && surge --project ./dist --domain nft-fuzion.surge.sh",
-    "start:shery": "yarn build && surge --project ./dist --domain paz-nft.surge.sh/"
+    "start:shery": "yarn build && surge --project ./dist --domain https://paz-nft.surge.sh"
   },
   "devDependencies": {
     "@squoosh/lib": "^0.4.0",
